# LISNR

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  encoded.txt
include/: imageEncoder.hpp  image_encoder.h
src/: image_encoder.cpp  main.cpp
tests/: use_image_encoder.cpp
